...
        android:layout_width="match_parent"
        android:layout_height="@dimen/hot_sales_size"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@+id/hot_sales">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_vew_hot_sales"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_hot_seles" />

...
